src/app/module/ng-swipe-to-delete/ng-swipe-to-delete.component.scss
.ngstd-main-canvas{
  overflow-x: hidden;
  /deep/
  mat-list-item .mat-list-item-content {
    padding: 0 !important;
  }
  .ngstd-delete-indicator {
    height: 97%;
    width: 100%;
    background-color: red;
    display: flex;
    justify-content: space-between;
    position: absolute;
    align-items: center;
    flex-shrink: 0;
    .ngstd-delete-icon {
      margin-left: 16px;
      margin-right: 16px;
      width: 24px;
      height: 24px;
      font-size: 24px;
      color: #fff;
    }
  }
  .ngstd-item-container {
    padding: 0 16px !important;
    background-color: #fff;
    width: 100%;
    display: flex;
    flex-direction: row;
    align-items: center;
    box-sizing: border-box;
    padding: 0 16px;
    position: relative;
    height: inherit;
    .ngstd-details {
      padding-left: 16px !important; 
    }
    .ngstd-icon{
      color: rgba(0, 0, 0, 0.54);
    }
  }
}

